--- a/currency_layer_api.info.yml
+++ b/currency_layer_api.info.yml
@@ -4,3 +4,6 @@ core: 8.x
 core_version_requirement: ^8 || ^9
 type: module
 package: Custom
+dependencies:
+  - drupal:rest
+  - drupal:serialization
